--- a/section/courses.tex
+++ b/section/courses.tex
@@ -1,9 +1,10 @@
-% SELECTED COURSES AND GRADES
-\section{selected courses and grades}
+%------- Selected Courses and Grades Section -------
+
+\section{Selected Courses and Grades}
   \resumeItemListStart
       \resumeItem{Artificial Intelligence, Dr. Reza Shamsaee, 20/20 (4/4)}
       \resumeItem{Computational Intelligence, Dr. Amir Farid Aminian Modarres, 20/20 (4/4)}
       \resumeItem{Multimedia Systems, Dr. Boshra Rajaei and Dr. Behzad Bakhtiari, 20/20 (4/4)}
       \resumeItem{Data Mining, Dr. Javad Hamidzadeh, 20/20 (4/4)}
       \resumeItem{Computer Vision, Dr. Amir Farid Aminian Modarres, 19.85/20 (4/4)}
-  \resumeItemListEnd
+  \resumeItemListEnd 
