--- a/section/education.tex
+++ b/section/education.tex
@@ -1,4 +1,5 @@
-%-----------EDUCATION-----------
+%---------------- Education Section ----------------
+
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
@@ -14,4 +15,4 @@
 %    \resumeSubheading
 %      {Blinn College}{Bryan, TX}
 %      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
-  \resumeSubHeadingListEnd
+  \resumeSubHeadingListEnd 
