--- a/section/experience.tex
+++ b/section/experience.tex
@@ -1,4 +1,5 @@
-%-----------EXPERIENCE-----------
+%--------------- Experience Section ----------------
+
 \section{Experience}
   \resumeSubHeadingListStart
 
@@ -42,4 +43,4 @@
         \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
       \resumeItemListEnd
 
-  \resumeSubHeadingListEnd
+  \resumeSubHeadingListEnd 
