--- a/section/interests.tex
+++ b/section/interests.tex
@@ -1,4 +1,5 @@
-% RESEARCH INTERESTS
+%----------- Research Interests Section ------------
+
 \section{Research Interests}
   \resumeItemListStart
       \resumeItem{Machine Learning}
