--- a/section/projects.tex
+++ b/section/projects.tex
@@ -1,5 +1,6 @@
-% ACADEMIC PROJECTS
-\section{academic projects}
+%------------ Academic Projects Section ------------
+
+\section{Academic Projects}
   \resumeItemListStart
 
       \resumeItem{Internet of Things course: Designed and developed an intelligent system for monitoring and controlling a remote greenhouse with a mobile application [\href{https://github.com/tabaraei/Smart-Greenhouse}{project}]}
@@ -17,8 +18,8 @@
       \resumeItem{Discrete Mathematics course: Programmed a C++ console application on graph algorithms including Dijkstra, BFS, DFS, Kruskal, Prim, and Floyd-Warshall [\href{https://github.com/tabaraei/Graph-Algorithms}{project}]}
 
   \resumeItemListEnd
-  
-  
+
+
 
 %-----------PROJECTS-----------
 \section{Projects}
@@ -39,4 +40,4 @@
             \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
             \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
           \resumeItemListEnd
-    \resumeSubHeadingListEnd
+    \resumeSubHeadingListEnd 
