--- a/section/skills.tex
+++ b/section/skills.tex
@@ -1,4 +1,5 @@
-%-----------PROGRAMMING SKILLS-----------
+%------------------ Skills Section -----------------
+
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
