--- a/style/colors.tex
+++ b/style/colors.tex
@@ -1,5 +1,5 @@
-% COLORS
-\usepackage{xcolor}
-\usepackage{hyperref}
+%---------------------- Colors ---------------------
+
 \definecolor{pink}{HTML}{F8CBAD}
-\definecolor{grey}{HTML}{D9D9D9}
+\definecolor{grey}{HTML}{D9D9D9} 
+\definecolor{greyLight}{HTML}{F2F2F2} 
