--- a/style/packages.tex
+++ b/style/packages.tex
@@ -1,3 +1,4 @@
+%-------------------- Packages ---------------------
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -10,4 +11,6 @@
 \usepackage{fancyhdr}
 \usepackage[english]{babel}
 \usepackage{tabularx}
-%\input{glyphtounicode} 
+\usepackage{fixltx2e} % superscript | subscript
+\usepackage{xcolor} % colors
+\usepackage{tcolorbox,changepage} % colorbox
