--- a/style/pagestyle.tex
+++ b/style/pagestyle.tex
@@ -1,3 +1,5 @@
+%-------------------- Page Style -------------------
+
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
 \fancyfoot{}
