--- a/section/contact.tex
+++ b/section/contact.tex
@@ -1,12 +1,12 @@
-%----------HEADING----------
-\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
-\end{tabular*}
+%----------------- Contact Section -----------------
 
-\begin{center}
-    \textbf{\Huge \scshape Ali Tabaraei} \\ \vspace{1pt}
-    \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{jake@su.edu}} $|$
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
-\end{center}
+\cbox{Ali Tabaraei}
+\vspace{10pt}
+
+\social{Phone}{(+98) 938 878 7118}
+\social{Gmail}{ali.tabaraeii@gmail.com}
+\social{Website}{\href{https://tabaraei.com}{tabaraei.com}}
+\social{GitHub}{\href{https://github.com/tabaraei}{github.com/tabaraei}}
+\social{LinkedIn}{\href{https://linkedin.com/in/tabaraei}{linkedin.com/in/tabaraei}}
+\social{Stack Overflow}{\href{https://stackoverflow.com/users/13836545/tabaraei}{stackoverflow.com/tabaraei}}
+\vspace{30pt}
