--- a/style/fonts.tex
+++ b/style/fonts.tex
@@ -1,4 +1,5 @@
-%----------FONT OPTIONS----------
+%---------------------- Fonts ----------------------
+
 % sans-serif
 %\usepackage[sfdefault]{FiraSans}
 %\usepackage[sfdefault]{roboto}
