added new sections

--- a/cv.tex
+++ b/cv.tex
@@ -19,7 +19,13 @@
 \input{section/interests}
 \input{section/courses}
 \input{section/projects}
+\input{section/workshops}
 \input{section/experience}
 \input{section/skills}
+\input{section/leadership}
+\input{section/certificates}
+\input{section/volunteer}
+\input{section/language}
+\input{section/references}
 
 \end{document}
