--- a/section/courses.tex
+++ b/section/courses.tex
@@ -1,10 +1,10 @@
 %------- Selected Courses and Grades Section -------
 
 \section{Selected Courses and Grades}
-  \resumeItemListStart
-      \resumeItem{Artificial Intelligence, Dr. Reza Shamsaee, 20/20 (4/4)}
-      \resumeItem{Computational Intelligence, Dr. Amir Farid Aminian Modarres, 20/20 (4/4)}
-      \resumeItem{Multimedia Systems, Dr. Boshra Rajaei and Dr. Behzad Bakhtiari, 20/20 (4/4)}
-      \resumeItem{Data Mining, Dr. Javad Hamidzadeh, 20/20 (4/4)}
-      \resumeItem{Computer Vision, Dr. Amir Farid Aminian Modarres, 19.85/20 (4/4)}
-  \resumeItemListEnd 
+    \resumeItemListStart
+        \resumeItem{\textbf{Artificial Intelligence}, \emph{Dr. Reza Shamsaee}, 20/20 (4/4)}
+        \resumeItem{\textbf{Computational Intelligence}, \emph{Dr. Amir Farid Aminian Modarres}, 20/20 (4/4)}
+        \resumeItem{\textbf{Multimedia Systems}, \emph{Dr. Boshra Rajaei and Dr. Behzad Bakhtiari}, 20/20 (4/4)}
+        \resumeItem{\textbf{Data Mining}, \emph{Dr. Javad Hamidzadeh}, 20/20 (4/4)}
+        \resumeItem{\textbf{Computer Vision}, \emph{Dr. Amir Farid Aminian Modarres}, 19.85/20 (4/4)}
+    \resumeItemListEnd 
