--- a/section/skills.tex
+++ b/section/skills.tex
@@ -1,11 +1,17 @@
 %------------------ Skills Section -----------------
 
 \section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
-    }}
- \end{itemize}
+    \resumeSkillItemStart{Programming Languages:}
+        \skillbox{Python} \skillbox{MATLAB} \skillbox{Dart} \skillbox{C++} \skillbox{JavaScript} \skillbox{C\#} \skillbox{SQL}
+    
+    \resumeSkillItemStart{Data Science Libraries:}
+        \skillbox{NumPy} \skillbox{Pandas} \skillbox{Scikit-Learn} \skillbox{Matplotlib} \skillbox{Seaborn} \skillbox{Streamlit}
+    
+    \resumeSkillItemStart{Markup Languages:}
+        \skillbox{\LaTeX{}} \skillbox{HTML} \skillbox{XML} \skillbox{Markdown} 
+    
+    \resumeSkillItemStart{Web and Application Frameworks:}
+        \skillbox{Flask} \skillbox{Flutter} \skillbox{ASP .NET}
+    
+    \resumeSkillItemStart{Softwares and Tools:}
+         \skillbox{Anaconda} \skillbox{Jupyter Notebook} \skillbox{Visual Studio}  \skillbox{Arduino}  \skillbox{Navicat} \skillbox{Postman} \skillbox{Git} \skillbox{Docker}
