--- a/style/packages.tex
+++ b/style/packages.tex
@@ -14,3 +14,5 @@
 \usepackage{fixltx2e} % superscript | subscript
 \usepackage{xcolor} % colors
 \usepackage{tcolorbox,changepage} % colorbox
+\usepackage{ragged2e} % justify
+\usepackage[T1]{fontenc} % underscore in email
