--- a/section/awards.tex
+++ b/section/awards.tex
@@ -1,12 +1,9 @@
 %------------ Awards and Honors Section ------------
 
 \section{Awards and Honors}
-  \resumeItemListStart
-  \resumeSubheading
-      {Ranked 2nd GPA among the graduating class at the end of Bachelor's}{Sep. 2020}
-      {Sadjad University of Technology}{Mashhad, Iran}
-      \resumeItem{Ranked 2\textsuperscript{nd} GPA among the graduating class at the end of Bachelor's, Sadjad University of Technology, Mashhad, Iran, 2020}
-      \resumeItem{Reached final stage of the 25th National Computer Olympiad in Iran (the final competition was not held due to COVID-19 pandemic), Mashhad, Iran, 2020}
-      \resumeItem{Ranked 39th in FUM Collegiate Programming Contest (FCPC 2019) among more than 500 nationwide teams, Mashhad, Iran, 2019}
-      \resumeItem{Ranked within the top 6\% among approximately 160,000 participants in the Iranian University Entrance Exam for Bachelor's degree in Computer Engineering, Iran, Mashhad, 2016}
-  \resumeItemListEnd 
+    \resumeItemListStart
+        \resumeItem{\textbf{Ranked 2\textsuperscript{nd} GPA} among the graduating class at the end of Bachelor's, \emph{Sadjad University of Technology, Mashhad, Iran, 2020}}
+        \resumeItem{\textbf{Reached final stage} of the 25\textsuperscript{th} \textbf{National Computer Olympiad} in Iran (the final competition was not held due to COVID-19 pandemic), \emph{Mashhad, Iran, 2020}}
+        \resumeItem{\textbf{Ranked 39\textsuperscript{th}} in \textbf{FUM Collegiate Programming Contest (FCPC 2019)} among more than 500 nationwide teams, \emph{Ferdowsi University of Mashhad, Mashhad, Iran, 2019}}
+        \resumeItem{Ranked within the \textbf{top 6\%} among approximately \textbf{160,000 participants} in the \textbf{Iranian University Entrance Exam} for Bachelor's degree in Computer Engineering, \emph{Mashhad, Iran, 2016}}
+    \resumeItemListEnd 
