--- a/section/contact.tex
+++ b/section/contact.tex
@@ -1,12 +1,12 @@
 %----------------- Contact Section -----------------
 
-\cbox{Ali Tabaraei}
+\coloredbox{Ali Tabaraei}
 \vspace{10pt}
 
 \social{Phone}{(+98) 938 878 7118}
-\social{Gmail}{ali.tabaraeii@gmail.com}
+\social{Email}{me@tabaraei.com}
 \social{Website}{\href{https://tabaraei.com}{tabaraei.com}}
 \social{GitHub}{\href{https://github.com/tabaraei}{github.com/tabaraei}}
 \social{LinkedIn}{\href{https://linkedin.com/in/tabaraei}{linkedin.com/in/tabaraei}}
 \social{Stack Overflow}{\href{https://stackoverflow.com/users/13836545/tabaraei}{stackoverflow.com/tabaraei}}
-\vspace{30pt}
+\vspace{20pt} 
