--- a/section/projects.tex
+++ b/section/projects.tex
@@ -1,43 +1,42 @@
 %------------ Academic Projects Section ------------
 
 \section{Academic Projects}
-  \resumeItemListStart
-
-      \resumeItem{Internet of Things course: Designed and developed an intelligent system for monitoring and controlling a remote greenhouse with a mobile application [\href{https://github.com/tabaraei/Smart-Greenhouse}{project}]}
-
-      \resumeItem{Computational Intelligence course: Developed several Neural network algorithms, including Genetic, MLP, Adaline, and Perceptron [\href{https://github.com/tabaraei/8-Queens-Problem-Genteic-Algorithm}{project1}] [\href{https://github.com/tabaraei/MLP-Implementation}{project2}] [\href{https://github.com/tabaraei/Adaline-Implementation}{project3}] [\href{https://github.com/tabaraei/Perceptron-Implementation}{project4}]}
-
-      \resumeItem{Multimedia Systems course: Implemented a speech recognition application in MATLAB to recognize "Hi" from "Bye" with supervised learning using SVM classifier [\href{https://github.com/tabaraei/Speech-Recognition}{project}]}
-
-      \resumeItem{Web course: Developed a website using ASP.NET MVC5 with authentication and authorization methods, email service, input validation, security control, database management, and CRUD operations in the admin panel [\href{https://github.com/tabaraei/ASP.NET-MVC-5}{project}]}
-
-      \resumeItem{Mobile Device Programming course: Implemented a phonebook application to manage contacts and calls with React-Native framework (JavaScript)}
-
-      \resumeItem{Information Security course:  Implemented RSA algorithm with Python [\href{https://github.com/tabaraei/RSA-Implementation}{project}]}
-
-      \resumeItem{Discrete Mathematics course: Programmed a C++ console application on graph algorithms including Dijkstra, BFS, DFS, Kruskal, Prim, and Floyd-Warshall [\href{https://github.com/tabaraei/Graph-Algorithms}{project}]}
-
-  \resumeItemListEnd
-
-
-
-%-----------PROJECTS-----------
-\section{Projects}
     \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
-          \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-          \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-          \resumeItemListEnd
+        \resumeProjectHeading
+            {\textbf{Internet of Things course} $|$ \emph{C, Python, Django, Flutter} \bracketlink{https://github.com/tabaraei/Smart-Greenhouse}{GitHub}}
+            {} % Time goes here
+            \resumeItemListStart
+                \resumeItem{Designed and developed an intelligent system to monitor and control a remote greenhouse}
+                \resumeItem{Track and control hardware via mobile application, Telegram bot, and text message (SMS)}
+            \resumeItemListEnd
+            
+        \resumeProjectHeading
+            {\textbf{Computational Intelligence course} $|$ \emph{MATLAB, Python} \bracketlink{https://github.com/tabaraei/8-Queens-Problem-Genteic-Algorithm}{GitHub} \bracketlink{https://github.com/tabaraei/MLP-Implementation}{GitHub} \bracketlink{https://github.com/tabaraei/Adaline-Implementation}{GitHub}  \bracketlink{https://github.com/tabaraei/Perceptron-Implementation}{GitHub}}
+            {} % Time goes here
+            \resumeItemListStart
+                \resumeItem{Developed several Neural network algorithms, including Genetic, MLP, Adaline, and Perceptron}
+            \resumeItemListEnd
+            
+        \resumeProjectHeading
+            {\textbf{Multimedia Systems course} $|$ \emph{MATLAB} \bracketlink{https://github.com/tabaraei/Speech-Recognition}{GitHub}}
+            {} % Time goes here
+            \resumeItemListStart
+                \resumeItem{Implemented a speech recognition application in MATLAB to recognize ``Hi'' from ``Bye'' with supervised learning using SVM classifier}
+                \resumeItem{Used MATLAB app designer to create an application with user interface}
+            \resumeItemListEnd
+            
+        \resumeProjectHeading
+            {\textbf{Web course} $|$ \emph{ASP.NET MVC5, HTML, CSS, JavaScript} \bracketlink{https://github.com/tabaraei/ASP.NET-MVC-5}{GitHub}}
+            {} % Time goes here
+            \resumeItemListStart
+                \resumeItem{Developed a website with authentication and authorization methods, email service, input validation, security control, database management, and CRUD operations in the admin panel}
+            \resumeItemListEnd
     \resumeSubHeadingListEnd 
+    
+    
+    
+%\resumeitem{Mobile Device Programming course: Implemented a phonebook application to manage contacts and calls with React-Native framework (JavaScript)}
+
+%\resumeItem{Information Security course:  Implemented RSA algorithm with Python \bracketlink{https://github.com/tabaraei/RSA-Implementation}{GitHub}}
+
+%\resumeItem{Discrete Mathematics course: Programmed a C++ console application on graph algorithms including Dijkstra, BFS, DFS, Kruskal, Prim, and Floyd-Warshall \bracketlink{https://github.com/tabaraei/Graph-Algorithms}{GitHub}} 
