--- a/cv.tex
+++ b/cv.tex
@@ -19,11 +19,12 @@
 \input{section/interests}
 \input{section/courses}
 \input{section/projects}
-\input{section/workshops}
-\input{section/experience}
-\input{section/skills}
+\input{section/industry}
+\input{section/teaching}
 \input{section/leadership}
+\input{section/workshops}
 \input{section/certificates}
+\input{section/skills}
 \input{section/volunteer}
 \input{section/language}
 \input{section/references}
