--- a/section/education.tex
+++ b/section/education.tex
@@ -1,16 +1,18 @@
 %---------------- Education Section ----------------
 
 \section{Education}
-    \resumeSubHeadingListStart
-        \resumeSubheading
-            {\textbf{B.Sc. in Computer Engineering}}{Sep. 2016 -- Sep. 2020}
+
+    \ListStartLineSimple
+        
+        \timeline{B.Sc. in Computer Engineering}{Sep. 2016 -- Sep. 2020}
             {Sadjad University of Technology}{Mashhad, Iran}
         
-        \resumeItemListStart
-            \resumeItem{\textbf{CGPA:} 17.85/20 (3.64/4)}
-            \resumeItem{\textbf{Last-two-year GPA:} 19.21/20 (3.96/4)}
-            \resumeItem{\textbf{Thesis Title:} Implementing a classifier to recommend top 5 products in a recommender system}
-            \resumeItem{\textbf{Thesis Grade:} 19/20 (4/4)}
-            \resumeItem{\textbf{Thesis Description:} Used Matrix-Factorization Model-Based Collaborative-Filtering approach on MovieLens 20M dataset to implement a recommender system which recommends top 5 movies for every single user, Under the supervision of Dr. Javad Hamidzadeh}
-        \resumeItemListEnd
-    \resumeSubHeadingListEnd 
+        \ListStartLineBulletTiny
+            \Item{\textbf{CGPA:} 17.85/20 (3.64/4)}
+            \Item{\textbf{Last-two-year GPA:} 19.21/20 (3.96/4)}
+            \Item{\textbf{Thesis Title:} Implementing a classifier to recommend top 5 products in a recommender system}
+            \Item{\textbf{Thesis Grade:} 19/20 (4/4)}
+            \Item{\textbf{Thesis Description:} Used Matrix-Factorization Model-Based Collaborative-Filtering approach on \emph{MovieLens 20M dataset} to implement a recommender system which recommends top 5 movies for every single user, Under the supervision of \emph{Dr. Javad Hamidzadeh}}
+        \ListEnd
+
+    \ListEnd 
