--- a/section/projects.tex
+++ b/section/projects.tex
@@ -1,42 +1,37 @@
 %------------ Academic Projects Section ------------
 
 \section{Academic Projects}
-    \resumeSubHeadingListStart
-        \resumeProjectHeading
-            {\textbf{Internet of Things course} $|$ \emph{C, Python, Django, Flutter} \bracketlink{https://github.com/tabaraei/Smart-Greenhouse}{GitHub}}
-            {} % Time goes here
-            \resumeItemListStart
-                \resumeItem{Designed and developed an intelligent system to monitor and control a remote greenhouse}
-                \resumeItem{Track and control hardware via mobile application, Telegram bot, and text message (SMS)}
-            \resumeItemListEnd
-            
-        \resumeProjectHeading
-            {\textbf{Computational Intelligence course} $|$ \emph{MATLAB, Python} \bracketlink{https://github.com/tabaraei/8-Queens-Problem-Genteic-Algorithm}{GitHub} \bracketlink{https://github.com/tabaraei/MLP-Implementation}{GitHub} \bracketlink{https://github.com/tabaraei/Adaline-Implementation}{GitHub}  \bracketlink{https://github.com/tabaraei/Perceptron-Implementation}{GitHub}}
-            {} % Time goes here
-            \resumeItemListStart
-                \resumeItem{Developed several Neural network algorithms, including Genetic, MLP, Adaline, and Perceptron}
-            \resumeItemListEnd
-            
-        \resumeProjectHeading
-            {\textbf{Multimedia Systems course} $|$ \emph{MATLAB} \bracketlink{https://github.com/tabaraei/Speech-Recognition}{GitHub}}
-            {} % Time goes here
-            \resumeItemListStart
-                \resumeItem{Implemented a speech recognition application in MATLAB to recognize ``Hi'' from ``Bye'' with supervised learning using SVM classifier}
-                \resumeItem{Used MATLAB app designer to create an application with user interface}
-            \resumeItemListEnd
-            
-        \resumeProjectHeading
-            {\textbf{Web course} $|$ \emph{ASP.NET MVC5, HTML, CSS, JavaScript} \bracketlink{https://github.com/tabaraei/ASP.NET-MVC-5}{GitHub}}
-            {} % Time goes here
-            \resumeItemListStart
-                \resumeItem{Developed a website with authentication and authorization methods, email service, input validation, security control, database management, and CRUD operations in the admin panel}
-            \resumeItemListEnd
-    \resumeSubHeadingListEnd 
-    
-    
-    
-%\resumeitem{Mobile Device Programming course: Implemented a phonebook application to manage contacts and calls with React-Native framework (JavaScript)}
 
-%\resumeItem{Information Security course:  Implemented RSA algorithm with Python \bracketlink{https://github.com/tabaraei/RSA-Implementation}{GitHub}}
+    \ListStartLineSimple
 
-%\resumeItem{Discrete Mathematics course: Programmed a C++ console application on graph algorithms including Dijkstra, BFS, DFS, Kruskal, Prim, and Floyd-Warshall \bracketlink{https://github.com/tabaraei/Graph-Algorithms}{GitHub}} 
+        \Item{\textbf{Internet of Things course} $|$ \emph{C, Python, Django, Flutter} \bracketlink{https://github.com/tabaraei/Smart-Greenhouse}{GitHub}\vspace{-8pt}}
+        \ListStartLineBulletTiny
+            \Item{Designed and developed an intelligent system to monitor and control a remote greenhouse}
+            \Item{Track and control hardware via mobile application, Telegram bot, and text message (SMS)}
+        \ListEnd
+
+        \Item{\textbf{Computational Intelligence course} $|$ \emph{MATLAB, Python} \bracketlink{https://github.com/tabaraei/8-Queens-Problem-Genteic-Algorithm}{GitHub} %\bracketlink{https://github.com/tabaraei/MLP-Implementation}{GitHub} \bracketlink{https://github.com/tabaraei/Adaline-Implementation}{GitHub}  \bracketlink{https://github.com/tabaraei/Perceptron-Implementation}{GitHub}
+        \vspace{-8pt}}
+        \ListStartLineBulletTiny
+            \Item{Developed several neural network algorithms, including Genetic, MLP, Adaline, and Perceptron}
+        \ListEnd
+
+        \Item{\textbf{Multimedia Systems course} $|$ \emph{MATLAB} \bracketlink{https://github.com/tabaraei/Speech-Recognition}{GitHub}\vspace{-8pt}}
+        \ListStartLineBulletTiny
+            \Item{Implemented a speech recognition application in MATLAB to recognize ``Hi'' from ``Bye'' with supervised learning using SVM classifier}
+            \Item{Used MATLAB app designer to create an application with user interface}
+        \ListEnd
+
+        \Item{\textbf{Web course} $|$ \emph{ASP.NET MVC5, HTML, CSS, JavaScript} \bracketlink{https://github.com/tabaraei/ASP.NET-MVC-5}{GitHub}\vspace{-8pt}}
+        \ListStartLineBulletTiny
+            \Item{Developed a website with authentication and authorization methods, email service, input validation, security control, database management, and CRUD operations in the admin panel}
+        \ListEnd
+
+    \ListEnd
+
+
+%\Item{Mobile Device Programming course: Implemented a phonebook application to manage contacts and calls with React-Native framework (JavaScript)}
+
+%\Item{Information Security course:  Implemented RSA algorithm with Python \bracketlink{https://github.com/tabaraei/RSA-Implementation}{GitHub}}
+
+%\Item{Discrete Mathematics course: Programmed a C++ console application on graph algorithms including Dijkstra, BFS, DFS, Kruskal, Prim, and Floyd-Warshall \bracketlink{https://github.com/tabaraei/Graph-Algorithms}{GitHub}} 
