--- a/section/volunteer.tex
+++ b/section/volunteer.tex
@@ -1,11 +1,12 @@
 %------------- Volunteer Work Section --------------
 
 \section{Volunteer Work}
-    \resumeItemListStart
-        \resumeItem{Member of \emph{Sadjad I/O} Student Group (student group to hold scientific events and conferences with the help of university faculty members), \emph{Sadjad University of Technology}, 2017 -- 2019}
+    \ListStartLineBullet
     
-        \resumeItem{Member of \emph{Baran} Charity Student Group (student group to help homeless children with educational programs), \emph{Sadjad University of Technology}, 2016 -- 2018 \bracketlink{https://barang.ir}{website}}
-        
-        \resumeItem{Member of \emph{MehrYaran} Charity Group (a charity group to support older people and people with disabilities), \emph{private group}, 2016}
+        \Item{Member of \emph{Sadjad I/O} Student Group (student group to hold scientific events and conferences with the help of university faculty members), \emph{Sadjad University of Technology}, 2017 -- 2019}
 
-    \resumeItemListEnd 
+        \Item{Member of \emph{Baran} Charity Student Group (student group to help homeless children with educational programs), \emph{Sadjad University of Technology}, 2016 -- 2018 \bracketlink{https://barang.ir}{website}}
+
+        \Item{Member of \emph{MehrYaran} Charity Group (a charity group to support older people and people with disabilities), \emph{private group}, 2016 -- 2017}
+
+    \ListEnd 
