--- a/section/workshops.tex
+++ b/section/workshops.tex
@@ -1,29 +1,29 @@
 %------------ Seminar and Workshops Section ------------
 
 \section{Seminar and Workshops}
-    \resumeSubHeadingListStart
-        
-        {\item\textbf{Workshop Participation}\vspace{-5pt}}
-            \resumeItemListStart
+    \ListStartLineSimple
 
-                \resumeItem{\emph{Deep Learning for Image Processing, 6\textsuperscript{th} Conference on Signal Processing and Intelligent Systems (ICSPIS 2020), Sadjad University of Technology}, one-day online workshop, 2020}
+        \Item{\normalsize\textbf{Workshop Participation}\vspace{-5pt}}
+        \ListStartLineBulletTiny
 
-                \resumeItem{\emph{Principles of writing a scientific paper, Dentistry Department of Ferdowsi University of Mashhad}, two-week length webinar, 2020}
+            \vspace{2pt}\Item{\textbf{Deep Learning for Image Processing}, \emph{6\textsuperscript{th} Conference on Signal Processing and Intelligent Systems (ICSPIS 2020), Sadjad University of Technology}, one-day online workshop, 2020}
 
-                \resumeItem{\emph{Mobile Application Development with React-Native, Scientific Society of Sadjad University of Technology}, two-week length workshop, 2018}
+            \vspace{4pt}\Item{\textbf{Principles of writing a scientific paper}, \emph{Dentistry Department of Ferdowsi University of Mashhad}, two-week online workshop, 2020}
 
-            \resumeItemListEnd
-            
-        \vspace{10pt}
+            \vspace{4pt}\Item{\textbf{Mobile Application Development with React-Native}, \emph{Scientific Society of Sadjad University of Technology}, two-week workshop, 2018}
 
-        {\item\textbf{Seminar Presentation}\vspace{-5pt}}
-            \resumeItemListStart
+        \ListEnd
 
-                \resumeItem{\textbf{Computer Vision course:} Presented a paper called \emph{``A computer vision system for defect discrimination and grading in tomatoes using machine learning and image processing''}, 2020}
+        \vspace{6pt}
 
-                \resumeItem{\textbf{Internet of Things course:} A presentation was given on \emph{``what is API and how to connect a mobile application to embedded hardware core''}, 2020}
+        \Item{\normalsize\textbf{Course Presentation}\vspace{-5pt}}
+        \ListStartLineBulletTiny
 
-                \resumeItem{\textbf{Seminar course:} A presentation was given on \emph{``React-Native vs. Flutter framework for mobile application development''}, 2019}
+            \vspace{2pt}\Item{\textbf{Computer Vision course:} Presented a paper called \emph{``A computer vision system for defect discrimination and grading in tomatoes using machine learning and image processing''}, 2020}
 
-            \resumeItemListEnd
-    \resumeSubHeadingListEnd
+            \vspace{4pt}\Item{\textbf{Internet of Things course:} A presentation was given on \emph{``what is API and how to connect a mobile application to embedded hardware core''}, 2020}
+
+            \vspace{4pt}\Item{\textbf{Seminar course:} A presentation was given on \emph{``React-Native vs. Flutter framework for mobile application development''}, 2019}
+
+        \ListEnd
+    \ListEnd 
