--- a/section/certificates.tex
+++ b/section/certificates.tex
@@ -1,20 +1,18 @@
-%--------------- Certificates Section --------=-----
+%--------------- Certificates Section --------------
 
 \section{Certificates}
-    \resumeItemListStart
-        %\resumeItem{\textbf{} by \emph{} on \emph{Coursera} \\
-        %\emph{} \bracketlink{http://icspis.ir}{credential}}
+    \ListStartLineBullet
 
-        \resumeItem{\textbf{Introduction to Machine Learning} by \emph{Duke University} on \emph{Coursera} \\
-        \emph{Certificate earned on April 28, 2021} \bracketlink{https://www.coursera.org/account/accomplishments/verify/HJCV2USBEU3N}{credential}}
-        
-        \resumeItem{\textbf{Mathematics for Machine Learning} by \emph{Imperial College London} on \emph{Coursera} \\
-        \emph{Certificate earned on November 29, 2020} \bracketlink{https://www.coursera.org/account/accomplishments/specialization/G8MYTCHSKK5Z}{credential}}
-        
-        \resumeItem{\textbf{Statistics with Python} by \emph{University of Michigan} on \emph{Coursera} \\
-        \emph{Certificate earned on November 19, 2020} \bracketlink{https://www.coursera.org/account/accomplishments/specialization/CSP8FC6T5ZSF}{credential}}
-        
-        \resumeItem{\textbf{Python for Everybody} by \emph{University of Michigan} on \emph{Coursera} \\
-        \emph{Certificate earned on October 7, 2020} \bracketlink{https://www.coursera.org/account/accomplishments/specialization/CGEW2RL7FZ53}{credential}}
+        \Item{\textbf{Introduction to Machine Learning} by \emph{Duke University} on \emph{Coursera} \\
+        Certificate earned on April 28, 2021 \bracketlink{https://www.coursera.org/account/accomplishments/verify/HJCV2USBEU3N}{credential}}
 
-    \resumeItemListEnd 
+        \Item{\textbf{Mathematics for Machine Learning} by \emph{Imperial College London} on \emph{Coursera} \\
+        Certificate earned on November 29, 2020 \bracketlink{https://www.coursera.org/account/accomplishments/specialization/G8MYTCHSKK5Z}{credential}}
+
+        \Item{\textbf{Statistics with Python} by \emph{University of Michigan} on \emph{Coursera} \\
+        Certificate earned on November 19, 2020 \bracketlink{https://www.coursera.org/account/accomplishments/specialization/CSP8FC6T5ZSF}{credential}}
+
+        \Item{\textbf{Python for Everybody} by \emph{University of Michigan} on \emph{Coursera} \\
+        Certificate earned on October 7, 2020 \bracketlink{https://www.coursera.org/account/accomplishments/specialization/CGEW2RL7FZ53}{credential}}
+
+    \ListEnd 
