--- a/section/interests.tex
+++ b/section/interests.tex
@@ -1,10 +1,10 @@
 %----------- Research Interests Section ------------
 
 \section{Research Interests}
-    \resumeItemListStart
-        \resumeItem{Machine Learning}
-        \resumeItem{Deep Learning}
-        \resumeItem{Soft Computing}
-        \resumeItem{Recommender Systems}
-        \resumeItem{Big Data Analytics}
-    \resumeItemListEnd 
+    \ListStartLineBullet
+        \Item{Machine Learning}
+        \Item{Deep Learning}
+        \Item{Soft Computing}
+        \Item{Recommender Systems}
+        \Item{Big Data Analytics}
+    \ListEnd 
