--- a/section/language.tex
+++ b/section/language.tex
@@ -1,13 +1,17 @@
 %---------------- Language Section -----------------
 
 \section{Language}
-    \resumeItemListStart
-        \resumeItem{\textbf{English:} Professional Working Proficiency}
-            \resumeItemListStartDash
-                %\resumeItem{IELTS: overall 7.5 (Listening:8, Reading:7.5, Speaking:7, Writing:7)}
-                \resumeItem{IELTS Academic Will be taken on August 1, 2021}
-                \resumeItem{GRE General Will be taken on November 1, 2021}
-            \resumeItemListEnd 
-        \resumeItem{\textbf{French:} Elementary Proficiency}
-        \resumeItem{\textbf{Persian:} Native Proficiency}
-    \resumeItemListEnd 
+    \ListStartLineBullet
+    
+        \Item{\textbf{English:} Professional Working Proficiency}
+            \ListStartDash
+                %\Item{IELTS: overall 7.5 (Listening:8, Reading:7.5, Speaking:7, Writing:7)}
+                \vspace{-6pt}\Item{IELTS Academic Will be taken on August 1, 2021}
+                \Item{GRE General Will be taken on November 1, 2021}
+            \ListEnd
+            
+        \Item{\textbf{French:} Elementary Proficiency}
+        
+        \Item{\textbf{Persian:} Native Proficiency}
+        
+    \ListEnd 
