added ml coursera certificate

--- a/section/certificates.tex
+++ b/section/certificates.tex
@@ -2,6 +2,9 @@
 
 \section{Certificates}
     \ListStartLineBullet
+    
+        \Item{\textbf{Machine Learning} by \emph{Stanford University} on \emph{Coursera} \\
+        Certificate earned on May 30, 2021 \bracketlink{https://www.coursera.org/account/accomplishments/verify/QKPK27MRNHHL}{credential}}
 
         \Item{\textbf{Introduction to Machine Learning} by \emph{Duke University} on \emph{Coursera} \\
         Certificate earned on April 28, 2021 \bracketlink{https://www.coursera.org/account/accomplishments/verify/HJCV2USBEU3N}{credential}}
