fixed small grammar issue

--- a/section/industry.tex
+++ b/section/industry.tex
@@ -24,14 +24,14 @@
             \Item{Used the cutting edge JWT token-based authentication techniques}
             \Item{Used the BloC design pattern as a state management library to separate presentation from business logic, facilitating testability and reusability}
             \Item{Implemented exception handling techniques to provide a reliable service under unexpectable circumstances}
-            \Item{Managed and tracked tasks with Trello}
+            \Item{Managed and tracked the tasks with Trello}
         \ListEnd
 
         \vspace{5pt}
         \timeline[\bracketlink{http://whitedesigners.ir}{website}]
             {Flutter Developer}{Jul 2019 -- Sep 2019}
             {White Designers Studio}{Internship}
-            
+
         \ListStartLineDash
             \Item{Developed an application in the field of health and wellness}
             \Item{Offered a better user interface plan for new application to the team}
