--- a/section/teaching.tex
+++ b/section/teaching.tex
@@ -6,19 +6,19 @@
         \timeline
             {Teaching Assistant}{Sep 2017 -- Jan 2020}
             {Sadjad University of Technology, Mashhad, Iran}{Part-Time}
-        
+
         \vspace{2pt}(Tutored and guided over 350 students for a total of approximately 160 hours)\vspace{-10pt}
-        
+
         \ListStartLineDash
-            \Item{Artificial Intelligence, under supervision of Dr. Reza Shamsaee (2 separate classes)}
-            \Item{Algorithm Design, under supervision of Dr. Javad Hamidzadeh (2 separate classes)}
-            \Item{Algorithm Design, under supervision of Dr. Mahdi Salkhorde Haghighi (1 class)}
-            \Item{Discrete Mathematics, under supervision of Dr. Saeed Yazdanian (2 separate classes)}
+            \Item{Artificial Intelligence, under the supervision of Dr. Reza Shamsaee (2 separate classes)}
+            \Item{Algorithm Design, under the supervision of Dr. Javad Hamidzadeh (2 separate classes)}
+            \Item{Algorithm Design, under the supervision of Dr. Mahdi Salkhorde Haghighi (1 class)}
+            \Item{Discrete Mathematics, under the supervision of Dr. Saeed Yazdanian (2 separate classes)}
         \ListEnd
 
         \vspace{5pt}
         \timeline[\bracketlink{https://www.youtube.com/channel/UCGeMEG_QxSsuxrJ-xZHtRFA}{YouTube}]
             {Course Instructor}{May 2020 -- Jul 2020}
             {Mobile Application Development with Flutter}{Part-Time}
-            
-    \ListEnd
+
+    \ListEnd 
