added scikit-learn certificate, few corrections were made

--- a/section/certificates.tex
+++ b/section/certificates.tex
@@ -3,6 +3,9 @@
 \section{Certificates}
     \ListStartLineBullet
     
+        \Item{\textbf{Machine Learning in Python with Scikit-Learn} by \emph{Inria} on \emph{France Université Numérique MOOC Platform} \\
+        Certificate earned on June 15, 2021 \bracketlink{https://lms.fun-mooc.fr/media/attestations/attestation_suivi_course-v1:inria+41026+session01_5df3d776dd49e305852794eef8fee2f9.pdf}{credential}}
+
         \Item{\textbf{Machine Learning} by \emph{Stanford University} on \emph{Coursera} \\
         Certificate earned on May 30, 2021 \bracketlink{https://www.coursera.org/account/accomplishments/verify/QKPK27MRNHHL}{credential}}
 
@@ -15,7 +18,7 @@
         \Item{\textbf{Statistics with Python} by \emph{University of Michigan} on \emph{Coursera} \\
         Certificate earned on November 19, 2020 \bracketlink{https://www.coursera.org/account/accomplishments/specialization/CSP8FC6T5ZSF}{credential}}
 
-        \Item{\textbf{Python for Everybody} by \emph{University of Michigan} on \emph{Coursera} \\
-        Certificate earned on October 7, 2020 \bracketlink{https://www.coursera.org/account/accomplishments/specialization/CGEW2RL7FZ53}{credential}}
+        %\Item{\textbf{Python for Everybody} by \emph{University of Michigan} on \emph{Coursera} \\
+        %Certificate earned on October 7, 2020 \bracketlink{https://www.coursera.org/account/accomplishments/specialization/CGEW2RL7FZ53}{credential}}
 
     \ListEnd 
