--- a/section/contact.tex
+++ b/section/contact.tex
@@ -8,5 +8,5 @@
 \social{Website}{\href{https://tabaraei.com}{tabaraei.com}}
 \social{GitHub}{\href{https://github.com/tabaraei}{github.com/tabaraei}}
 \social{LinkedIn}{\href{https://linkedin.com/in/tabaraei}{linkedin.com/in/tabaraei}}
-\social{Stack Overflow}{\href{https://stackoverflow.com/users/13836545/tabaraei}{stackoverflow.com/tabaraei}}
+\social{Stack Overflow}{\href{https://stackoverflow.com/users/13836545/tabaraei}{stackoverflow.com/users/13836545/tabaraei}}
 \vspace{20pt} 
