--- a/section/industry.tex
+++ b/section/industry.tex
@@ -3,7 +3,7 @@
 \section{Industry Experience}
     \ListStartLineBullet
 
-        \timeline[\bracketlink{https://www.kstp.ir/en}{website}]
+        \timeline[\bracketlink{https://www.kstp.ir/en/page/about-us}{website}]
             {Data Mining and Machine Learning Engineer}{June 2020 -- Present}
             {Khorasan Science and Technology Park}{Full-Time}
         \ListStartLineDash
