--- a/section/skills.tex
+++ b/section/skills.tex
@@ -2,18 +2,18 @@
 
 \section{Technical Skills}
     \vspace{-8pt}
-    
+
     \resumeSkillItemStart{Programming Languages:}
-        \skillbox{Python} \skillbox{MATLAB} \skillbox{Dart} \skillbox{C++} \skillbox{JavaScript} \skillbox{C\#} \skillbox{SQL}
+        \skillbox{Python} \skillbox{MATLAB} \skillbox{Dart} \skillbox{C++} \skillbox{SQL}
 
     \resumeSkillItemStart{Data Science Libraries:}
         \skillbox{NumPy} \skillbox{Pandas} \skillbox{Scikit-Learn} \skillbox{Matplotlib} \skillbox{Seaborn} \skillbox{Streamlit}
 
     \resumeSkillItemStart{Markup Languages:}
-        \skillbox{\LaTeX{}} \skillbox{HTML} \skillbox{XML} \skillbox{Markdown}
+        \skillbox{\LaTeX{}} \skillbox{HTML} \skillbox{Markdown}
 
     \resumeSkillItemStart{Web and Application Frameworks:}
         \skillbox{Flask} \skillbox{Flutter} \skillbox{ASP .NET}
 
     \resumeSkillItemStart{Softwares and Tools:}
-         \skillbox{Anaconda} \skillbox{Jupyter Notebook} \skillbox{Visual Studio}  \skillbox{Arduino}  \skillbox{Navicat} \skillbox{Postman} \skillbox{Git} \skillbox{Docker} 
+         \skillbox{Anaconda} \skillbox{Jupyter Notebook} \skillbox{Visual Studio}  \skillbox{Arduino} \skillbox{Postman} \skillbox{Git} \skillbox{Docker} 
