--- a/section/awards.tex
+++ b/section/awards.tex
@@ -2,13 +2,13 @@
 
 \section{Awards and Honors}
     \ListStartLineBullet
-    
+
         \Item{\textbf{Ranked 2\textsuperscript{nd} GPA} among the graduating class of 168 students at the end of Bachelor's, \emph{Computer and Information Technology Department, Sadjad University of Technology, Mashhad, Iran}, 2020}
-        
-        \Item{\textbf{Reached final stage} of the 25\textsuperscript{th} \textbf{National Computer Olympiad} in Iran (the final competition was not held due to COVID-19 pandemic), \emph{Mashhad, Iran}, 2020}
-        
+
+        \Item{\textbf{Reached final stage} of the 25\textsuperscript{th} \textbf{National Computer Olympiad} in Iran (the final competition was not held due to the COVID-19 pandemic), \emph{Mashhad, Iran}, 2020}
+
         \Item{\textbf{Ranked 39\textsuperscript{th}} in \textbf{FUM Collegiate Programming Contest (FCPC 2019)} among more than 500 nationwide teams, \emph{Ferdowsi University of Mashhad, Mashhad, Iran}, 2019}
-        
+
         \Item{Ranked within the \textbf{top 6\%} among approximately \textbf{160,000 participants} in the \textbf{Iranian University Entrance Exam} for Bachelor's degree in Computer Engineering, \emph{Mashhad, Iran}, 2016}
-        
+
     \ListEnd 
