dates were corrected

--- a/style/commands.tex
+++ b/style/commands.tex
@@ -25,7 +25,7 @@
 
 % social -------------------------------------------
 \newcommand{\social}[2]{
-    \textbf{#1:} \textsf{#2} \\
+    \textbf{#1:} \textsf{#2} \vspace{3pt} \\
 }
 
 
