--- a/section/contact.tex
+++ b/section/contact.tex
@@ -4,7 +4,7 @@
 \vspace{10pt}
 
 \social{Phone}{(+98) 938 878 7118}
-\social{Email}{me@tabaraei.com}
+\social{Email}{ali.tabaraeii@gmail.com}
 \social{Website}{\href{https://tabaraei.com}{tabaraei.com}}
 \social{GitHub}{\href{https://github.com/tabaraei}{github.com/tabaraei}}
 \social{LinkedIn}{\href{https://linkedin.com/in/tabaraei}{linkedin.com/in/tabaraei}}
