--- a/section/language.tex
+++ b/section/language.tex
@@ -6,8 +6,8 @@
         \Item{\textbf{English:} Professional Working Proficiency}
             \ListStartDash
                 %\Item{IELTS: overall 7.5 (Listening:8, Reading:7.5, Speaking:7, Writing:7)}
-                \vspace{-6pt}\Item{IELTS Academic Will be taken on August 21, 2021}
-                \Item{GRE General Will be taken on November 1, 2021}
+                \vspace{-6pt}\Item{IELTS Academic Will be taken on October 30, 2021}
+                %\Item{GRE General Will be taken on November 1, 2021}
             \ListEnd
 
         \Item{\textbf{French:} Elementary Proficiency}
